Add .deliver to thank you email

--- a/TODO
+++ b/TODO
@@ -47,9 +47,9 @@ Features:
  ☐ Blog
 
  ☐ Contact Form
-   ☐ Name
-   ☐ Email
-   ☐ Questions / Concerns
+   ✔ Name @done (14-08-02 14:01)
+   ✔ Email @done (14-08-02 14:01)
+   ✔ Questions / Concerns @done (14-08-02 14:01)
 
 
  ☐ mft-811 (DB pass)
